@@ -1,3 +1,13 @@
+2000-11-01  Philip Blundell  <philb@gnu.org>
+
+	From 2000-06-15  H.J. Lu  <hjl@gnu.org>
+	* dyn-string.c: Removed. Not needed with dyn-string.c in
+	libiberty.
+	* dyn-string.h: Likewise.
+	* Makefile.am: Remove references to dyn-string.c and
+	dyn-string.h. Rebuild dependency.
+	* Makefile.in: Rebuild.
+
 2000-10-16  Philip Blundell  <pb@futuretv.com>
 
 	* configure.in: Set version number to 2.10.1.
